SonarLint 오류 수정